Add format changes
Make "information" title above pictures and text. Change information
below to a list format where pictures are centered over text.

--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -1,5 +1,6 @@
 body {
   font-family: 'Courier New', Courier, monospace;
+  text-align: center;
 }
 
 img {
@@ -10,6 +11,25 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+}
+
+header {
+  display: flex;
+  justify-content: center;
+
+}
+
+ul {
+  display: flex;
+  justify-content: space-between;
+  list-style: none;
+}
+
+li {
+  margin: 32px 52px;
+}
+.text {
+  text-align: center;
 }
 
 /* do not edit this footer */
