--- a/foundations/flex/06-flex-layout/style.css
+++ b/foundations/flex/06-flex-layout/style.css
@@ -5,6 +5,8 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  display: flex;
+  flex-direction: column;
 }
 
 img {
@@ -23,4 +25,47 @@ input {
   border-radius: 16px;
   padding: 8px 24px;
   width: 400px;
+}
+li {
+  list-style: none;
+}
+a {
+  text-decoration: none;
+  color:  rgb(100, 99, 99);
+}
+
+.header {
+  display: flex;
+  align-items: center;
+}
+.left-links {
+  display: flex;
+  gap: 15px;
+  margin: 0;
+  padding: 10px;
+}
+
+.right-links {
+  margin-left: auto;
+  display: flex;
+  gap: 15px;
+  margin-right: 10px;
+}
+
+.content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: auto;
+  margin-bottom: auto;
+  gap: 10px;
+}
+
+.footer {
+  display: flex;
+  align-items: center;
+  background-color: lightgray;
+  margin-top: auto;
+  margin-bottom: 0;
 }
